--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,9 @@
   main {
     flex: 1 0 auto;
   }
+  .btn {
+      padding: 0 1rem;
+  }
   .brand-logo img {
     position:relative; 
     top:10px; 
@@ -51,6 +54,33 @@
 }
 #emailAddress a {
     color: #fff;
+}
+.home-cards {
+    padding-top: 2rem;
+}
+.home-cards span {
+    display: block;
+    margin-top: 2rem;
+    text-align: center;
+}
+.card-vector {
+    background: #e4e4e4;
+    border: 5px solid grey;
+    width: 150px;
+    height: 150px;
+    line-height: 140px;
+    border-radius: 50%;
+    margin:auto;
+}
+.card-vector i {
+    line-height: inherit;
+    display: block;
+    text-align: center;
+    font-size: 4rem;
+    color: grey;
+}
+.card-content p {
+    line-height: 1.5;
 }
 @media only screen and (max-width: 600px) {
     .brand-logo img {
