--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
   body {
     display: flex;
     min-height: 100vh;
-    flex-direction: column;
+    flex-direction: column; 
   }
 
   main {
@@ -26,6 +26,9 @@
 }
 .portfolio-cta {
     margin-top: 3rem;
+}
+.portfolio-cta h5.white-text {
+    margin-bottom: 3rem;
 }
 .social-icons  {
     margin-right: .5rem;
@@ -82,6 +85,52 @@
 .card-content p {
     line-height: 1.5;
 }
+.portfolio-panel {
+    background: #e4e4e4;
+    padding: 2rem;
+    margin-top: 1rem;
+    
+}
+.portfolio-panel h2 {
+    font-family: 'Bevan', cursive;
+    text-align: center;
+    margin-bottom: 2.424rem;
+}
+.tech-wrapper {
+    padding-top: 1rem;
+}
+.btn-tech {
+    padding: 0 .75rem;
+    width: 154px;
+}
+.btn-tech.disabled i {
+    opacity: .5;
+}
+.card-reveal-text {
+    margin-top: 2rem;
+}
+.come-in {
+    transform: translateY(150px);
+    animation: come-in 0.8s ease forwards;
+  }
+  
+  .come-in:nth-child(odd) {
+    animation-duration: 0.6s;
+  }
+  .come-in:last-child {
+    animation-duration: 1.2s;
+  }
+  
+  .already-visible {
+    transform: translateY(0);
+    animation: none;
+  }
+  
+  @keyframes come-in {
+    to {
+      transform: translateY(0);
+    }
+  }
 @media only screen and (max-width: 600px) {
     .brand-logo img {
         position:relative; 
