--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,10 +4,22 @@
     min-height: 100vh;
     flex-direction: column; 
   }
+i.left {
+    margin-right: 10px;
+}
+i.right {
+    margin-left: 10px;
+}
 
-  main {
+.m0 {
+    margin: 0 !important;
+}
+.p0 {
+    padding: 0 !important;
+}
+main {
     flex: 1 0 auto;
-  }
+}
   .btn {
       padding: 0 1rem;
   }
@@ -105,6 +117,7 @@
 .btn-tech.disabled i {
     opacity: .5;
 }
+
 .card-reveal-text {
     margin-top: 2rem;
 }
@@ -114,8 +127,10 @@
     background: linear-gradient(to right, rgba(0,0,0,1) 50%,rgba(82,82,82,1) 66%,rgba(199,199,199,0) 89%,rgba(255,255,255,0) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#00ffffff',GradientType=1 );
     width: 100%;
-    padding: 1rem !important;
-    
+    padding: 1rem !important;    
+}
+.card-action i {
+    margin-right: 3px;
 }
 .come-in {
     transform: translateY(150px);
@@ -139,6 +154,19 @@
       transform: translateY(0);
     }
   }
+.project-desc {
+    padding-bottom: .75rem;
+}
+.featured-tech {
+    display: block;
+    margin: .5rem 0;
+}
+
+.fa-text {
+    font-family: sans-serif;
+    text-transform: initial;
+    font-weight: 400 !important;
+}
 @media only screen and (max-width: 600px) {
     .brand-logo img {
         position:relative; 
